# sway

./: .activate.sh  .gitignore  .pre-commit-config.yaml  .sway-config.yaml  README.md  poetry.toml  pyproject.toml
.github/workflows/: main.yml
sway/: __main__.py  main.py
sway/commands/: branch.py  build.py  config.py
sway/utils/: config.py  yaml.py
