[tool.poetry]
name = "sway"
version = "0.1.4"
description = "managing micro-repos for monorepos"
authors = ["Saurabh Chopra <sc@saurabhchopra.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sway = "sway.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
